# An-Optimal-RuleFit-Algorithm

./: .gitignore  IORFA.ipynb  README.md  main.py  pyproject.toml
IORFA/: IORFA.py  IORFA_v2.py  benchmark_results_real.csv  test_IORFA.ipynb
configs/: pmlb_regression.yaml
rulefit_benchmark/: __init__.py  cli.py  config.py  models.py  preprocessing.py  rules.py  runner.py
